--- a/index.html
+++ b/index.html
@@ -12,5 +12,11 @@
 
 
 </section>
+<footer>
+<p>Phone: 07 4779 1243</p>
+<p>Fax: 4779 1244</p>
+<p>Address: 12 Plongk Street, Cairnsville, QLD</p>
+<p>Email: training@trainingzone.com.au</p>
+</footer>
 </body>
 </html>
